blog/infra/k8s/client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-client
  template:
    metadata:
      labels:
        app: blog-client
    spec:
      containers:
      - name: blog-client
        image: armosdocker/blog-client
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        # ports:
        # - containerPort: <Port>

---
# Cluster IP Service

apiVersion: v1
kind: Service
metadata:
  name: blog-client-srv
spec:
  type: ClusterIP
  selector:
    app: blog-client
  ports:
  - name: blog-client
    protocol: TCP
    port: 5000
    targetPort: 5000
