blog/infra/k8s/comments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-comments
  template:
    metadata:
      labels:
        app: blog-comments
    spec:
      containers:
      - name: blog-comments
        image: armosdocker/blog-comments
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        # ports:
        # - containerPort: <Port>

---
# Cluster IP Service

apiVersion: v1
kind: Service
metadata:
  name: blog-comments-srv
spec:
  type: ClusterIP
  selector:
    app: blog-comments
  ports:
  - name: blog-comments
    protocol: TCP
    port: 3001
    targetPort: 3001
