blog/infra/k8s/event-bus-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-event-bus
  template:
    metadata:
      labels:
        app: blog-event-bus
    spec:
      containers:
      - name: blog-event-bus
        image: armosdocker/blog-event-bus
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        # ports:
        # - containerPort: <Port>

---
# Cluster IP Service

apiVersion: v1
kind: Service
metadata:
  name: blog-event-bus-srv
spec:
  type: ClusterIP
  selector:
    app: blog-event-bus
  ports:
  - name: blog-event-bus
    protocol: TCP
    port: 3005
    targetPort: 3005
