blog/infra/k8s/event-bus-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: blog-event-bus-nodeport-srv
spec:
  type: NodePort
  selector:
    app: blog-event-bus
  ports:
  - name: blog-event-bus
    protocol: TCP
    port: 3005
    targetPort: 3005
