blog/infra/k8s/moderation-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-moderation
  template:
    metadata:
      labels:
        app: blog-moderation
    spec:
      containers:
      - name: blog-moderation
        image: armosdocker/blog-moderation
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        # ports:
        # - containerPort: <Port>

---
# Cluster IP Service

apiVersion: v1
kind: Service
metadata:
  name: blog-moderation-srv
spec:
  type: ClusterIP
  selector:
    app: blog-moderation
  ports:
  - name: blog-moderation
    protocol: TCP
    port: 3004
    targetPort: 3004
