blog/infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-posts
  template:
    metadata:
      labels:
        app: blog-posts
    spec:
      containers:
      - name: blog-posts
        image: armosdocker/blog-posts
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        # ports:
        # - containerPort: <Port>

---
# Cluster IP Service

apiVersion: v1
kind: Service
metadata:
  name: blog-posts-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: blog-posts
  ports:
  - name: blog-posts
    protocol: TCP
    port: 3000
    targetPort: 3000
