blog/infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-posts-srv
spec:
  type: NodePort
  selector:
    app: blog-posts
  ports:
  - name: blog-posts
    protocol: TCP
    port: 3000
    targetPort: 3000
