blog/infra/k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-query
  template:
    metadata:
      labels:
        app: blog-query
    spec:
      containers:
      - name: blog-query
        image: armosdocker/blog-query
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        # ports:
        # - containerPort: <Port>

---
# Cluster IP Service

apiVersion: v1
kind: Service
metadata:
  name: blog-query-srv
spec:
  type: ClusterIP
  selector:
    app: blog-query
  ports:
  - name: blog-query
    protocol: TCP
    port: 3002
    targetPort: 3002
