blog/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  labels:
    name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: blog.microservices.com
      http:
        paths:
          - path: /posts
            backend:
              serviceName: blog-posts-clusterip-srv
              servicePort: 3000
          - path: /posts/?(.*)/comments
            backend:
              serviceName: blog-comments-srv
              servicePort: 3001
          - path: /query
            backend:
              serviceName: blog-query-srv
              servicePort: 3002
          - path: /?(.*)
            backend:
              serviceName: blog-client-srv
              servicePort: 5000
